cmake_minimum_required(VERSION 2.8)
project(rgged)
set( CMAKE_C_FLAGS "-Wall -g -O3")
find_package( ZLIB REQUIRED )
if ( ZLIB_FOUND )
    include_directories( ${ZLIB_INCLUDE_DIRS} )
    target_link_libraries( rgged ${ZLIB_LIBRARIES} )
endif( ZLIB_FOUND )
add_subdirectory(lib/bamtools)
add_subdirectory(src)
